# Assignment-WebcamStream

./: CMakeLists.txt  README.md  firstworker.cpp  firstworker.h  main.cpp  secondworker.cpp  secondworker.h  task.docx
